--- a/Project1.html
+++ b/Project1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to<mark>Incredible India </mark></h1>
+    <h1>Welcome to <mark>Incredible India </mark></h1>
     <p>Discover the diversity,beauty,and rich heritage of India!</p>
 
     <nav>
@@ -18,7 +18,30 @@
             <li>Contact Us</li>
         </ul>
     </nav>
+    
+    <div>
+    <h2>About India</h2>
+    <p>India is a land of incredible diversity. From the snow capped peaks <i>Himalayas</i> to the serene backwater if kerala , every corner of india tells a unique story. India is the <b>most populated country</b> in the world and boasts a history spanning if years. Its rich traditions have left an indelible mark on the world.</p>
 
-    <h2>About ndia</h2>
+        <img src="india_map.jpg" alt="India map" height="390">
+        <p><blockquote>India: A land of cultural and geographical diversity</blockquote></p>
+        <p><blockquote>"Unity in diversity is not just a slogan in India but a way of life"</blockquote></p>
+        <p>highlights of india include:</p>
+        <ul>
+            <li><b>Architecture: </b>Majesty monuments like the Taj Mahal and Red Fort.</li>
+            <li><b>Cuisine: </b>Diverse flavours from spicy curries to sweet desserts.</li>
+            <li><b>Culture: </b>Vibrant festivals, classical dances, and colorful attire.</li>
+        </ul>
+    </div>
+    <div>
+        <h2>Famous Landmarks</h2>
+        <p>India is the home to <mark>29 UNESCO world Heritage sites. </mark> making ot paradise for the history and Architecture enthusiasts.</p>
+        <ol>
+            <li><img src="tajmahal.jpg" alt="Taj mahal" height="300"></li>
+            <p>The Taj Mahal , a symbol of eternal love</p>
+            <li><img src="qutubminar.jpg" alt="Qutubminar" height="300"></li>
+            <p>The Qutub minar , an architecture marvel in Delhi</p>
+        </ol>
+    </div>
 </body>
 </html>
