Home page completed

--- a/Project1.html
+++ b/Project1.html
@@ -37,11 +37,48 @@
         <h2>Famous Landmarks</h2>
         <p>India is the home to <mark>29 UNESCO world Heritage sites. </mark> making ot paradise for the history and Architecture enthusiasts.</p>
         <ol>
-            <li><img src="tajmahal.jpg" alt="Taj mahal" height="300"></li>
+            <li><img src="tajmahal.jpg" alt="Taj mahal" height="300px"></li>
             <p>The Taj Mahal , a symbol of eternal love</p>
-            <li><img src="qutubminar.jpg" alt="Qutubminar" height="300"></li>
+            <li><img src="qutubminar.jpg" alt="Qutubminar" height="300px"></li>
             <p>The Qutub minar , an architecture marvel in Delhi</p>
         </ol>
+        <p>
+            <i>Dont miss exploring the carvings, towering and breathtaking landscapes!</i>
+        </p>
+    </div>
+    <div>
+        <h2>Indian Culture</h2>
+        <p>India's <b>cultural heritage</b> is a blend of various traditions, languages and religions. Each region has its unique identity and traditiond that are celenrated through festivals and daily life. Here are some highlights :</p>
+        <ul>
+            <li>Classical Dances : Bharatnatyam,Khathak and Odissi.</li>
+            <li>Music :Tradiltional instumentals like Sitar and Tabla.</li>
+            <li>Festivals : Diwali, Holi, Eid and christmas bring people together in celebration.</li>
+            <img src="dance.jpg" alt="Dance" height="300px">
+            <div>A glimpse of Indian Classical Dance</div>
+        </ul>
+    </div>
+    <div>
+        <h2>Delious Indian Cuisine</h2>
+        <p>Indian food is as diverse as its Culture. From the fiery curries of south to th e hearty bread of rhe north, there's something for everyone. Popular dishes included :</p>
+        <ul>
+            <li><b>North Indian :</b> Butter chicken, naan and paneer tikka.</li>
+            <li><b>South Indian :</b> Dosa, idli and sambar.</li>
+            <li><b>Street food : </b> Vada pav, pani puri and chaat.</li>
+            <img src="biryani.jpg" alt="Biryani" height="300px">
+            <div>Delicious Hyderabadi Biryani</div>
+
+            <img src="street_food.jpg" alt="street food" height="300px">
+            <div>Colourful and Flavourful Indian street food</div>
+        </ul>
+    </div>
+    <div>
+        <span>Contact us at </span>
+        <a href="">info@incredibleindia.com</a>
+        <br>
+        <p>&copy; 2025 Incredible India Project. All rights reserved.</p>
+        <p style="display: inline-block">Follow us on : </p>
+        <a href="https://www.facebook.com/IncredibleIndia/">Facebook</a>
+        <a href="https://www.instagram.com/IncredibleIndia/">Twitter</a>
     </div>
 </body>
 </html>
