--- a/HTML project/homePage.html
+++ b/HTML project/homePage.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Welcome to <mark>Incredible India </mark></h1>
     <p>Discover the diversity,beauty,and rich heritage of India!</p>
-
     <nav>
         <ul>
             <li>Home</li>
@@ -18,14 +19,21 @@
             <li>Contact Us</li>
         </ul>
     </nav>
-    
-    <div>
-    <h2>About India</h2>
-    <p>India is a land of incredible diversity. From the snow capped peaks <i>Himalayas</i> to the serene backwater if kerala , every corner of india tells a unique story. India is the <b>most populated country</b> in the world and boasts a history spanning if years. Its rich traditions have left an indelible mark on the world.</p>
 
-        <img src="india_map.jpg" alt="India map" height="390">
-        <p><blockquote>India: A land of cultural and geographical diversity</blockquote></p>
-        <p><blockquote>"Unity in diversity is not just a slogan in India but a way of life"</blockquote></p>
+    <div>
+        <h2>About India</h2>
+        <p>India is a land of incredible diversity. From the snow capped peaks <i>Himalayas</i> to the serene backwater
+            if kerala , every corner of india tells a unique story. India is the <b>most populated country</b> in the
+            world and boasts a history spanning if years. Its rich traditions have left an indelible mark on the world.
+        </p>
+
+        <img src="../india_map.jpg" alt="India map" height="390">
+        <p>
+        <blockquote>India: A land of cultural and geographical diversity</blockquote>
+        </p>
+        <p>
+        <blockquote>"Unity in diversity is not just a slogan in India but a way of life"</blockquote>
+        </p>
         <p>highlights of india include:</p>
         <ul>
             <li><b>Architecture: </b>Majesty monuments like the Taj Mahal and Red Fort.</li>
@@ -35,9 +43,10 @@
     </div>
     <div>
         <h2>Famous Landmarks</h2>
-        <p>India is the home to <mark>29 UNESCO world Heritage sites. </mark> making ot paradise for the history and Architecture enthusiasts.</p>
+        <p>India is the home to <mark>29 UNESCO world Heritage sites. </mark> making ot paradise for the history and
+            Architecture enthusiasts.</p>
         <ol>
-            <li><img src="tajmahal.jpg" alt="Taj mahal" height="300px"></li>
+            <li><img src="../tajmahal.jpg" alt="Taj mahal" height="300px"></li>
             <p>The Taj Mahal , a symbol of eternal love</p>
             <li><img src="qutubminar.jpg" alt="Qutubminar" height="300px"></li>
             <p>The Qutub minar , an architecture marvel in Delhi</p>
@@ -48,26 +57,29 @@
     </div>
     <div>
         <h2>Indian Culture</h2>
-        <p>India's <b>cultural heritage</b> is a blend of various traditions, languages and religions. Each region has its unique identity and traditiond that are celenrated through festivals and daily life. Here are some highlights :</p>
+        <p>India's <b>cultural heritage</b> is a blend of various traditions, languages and religions. Each region has
+            its unique identity and traditiond that are celenrated through festivals and daily life. Here are some
+            highlights :</p>
         <ul>
             <li>Classical Dances : Bharatnatyam,Khathak and Odissi.</li>
             <li>Music :Tradiltional instumentals like Sitar and Tabla.</li>
             <li>Festivals : Diwali, Holi, Eid and christmas bring people together in celebration.</li>
-            <img src="dance.jpg" alt="Dance" height="300px">
+            <img src="../dance.jpg" alt="Dance" height="300px">
             <div>A glimpse of Indian Classical Dance</div>
         </ul>
     </div>
     <div>
         <h2>Delious Indian Cuisine</h2>
-        <p>Indian food is as diverse as its Culture. From the fiery curries of south to th e hearty bread of rhe north, there's something for everyone. Popular dishes included :</p>
+        <p>Indian food is as diverse as its Culture. From the fiery curries of south to th e hearty bread of rhe north,
+            there's something for everyone. Popular dishes included :</p>
         <ul>
             <li><b>North Indian :</b> Butter chicken, naan and paneer tikka.</li>
             <li><b>South Indian :</b> Dosa, idli and sambar.</li>
             <li><b>Street food : </b> Vada pav, pani puri and chaat.</li>
-            <img src="biryani.jpg" alt="Biryani" height="300px">
+            <img src="../biryani.jpg" alt="Biryani" height="300px">
             <div>Delicious Hyderabadi Biryani</div>
 
-            <img src="street_food.jpg" alt="street food" height="300px">
+            <img src="../street_food.jpg" alt="street food" height="300px">
             <div>Colourful and Flavourful Indian street food</div>
         </ul>
     </div>
@@ -81,4 +93,5 @@
         <a href="https://www.instagram.com/IncredibleIndia/">Twitter</a>
     </div>
 </body>
+
 </html>
