--- a/HTML project/homePage.html
+++ b/HTML project/homePage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
 </head>
 
 <body>
@@ -12,11 +12,11 @@
     <p>Discover the diversity,beauty,and rich heritage of India!</p>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Culture</li>
-            <li>Landmark</li>
-            <li>Cuidine</li>
-            <li>Contact Us</li>
+            <li><a href="homePage.html">Home</a></li>
+            <li><a href="">Culture</a></li>
+            <li><a href="landmarkPage.html">Landmarks</a></li>
+            <li><a href="">Cuisine</a></li>
+            <li><a href="">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -48,7 +48,7 @@
         <ol>
             <li><img src="../tajmahal.jpg" alt="Taj mahal" height="300px"></li>
             <p>The Taj Mahal , a symbol of eternal love</p>
-            <li><img src="qutubminar.jpg" alt="Qutubminar" height="300px"></li>
+            <li><img src="../qutubminar.jpg" alt="Qutubminar" height="300px"></li>
             <p>The Qutub minar , an architecture marvel in Delhi</p>
         </ol>
         <p>
