Project with just HTML completed

--- a/HTML project/homePage.html
+++ b/HTML project/homePage.html
@@ -12,11 +12,11 @@
     <p>Discover the diversity,beauty,and rich heritage of India!</p>
     <nav>
         <ul>
-            <li><a href="homePage.html">Home</a></li>
-            <li><a href="">Culture</a></li>
-            <li><a href="landmarkPage.html">Landmarks</a></li>
-            <li><a href="">Cuisine</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="HomePage.html">Home</a></li>
+            <li><a href="CulturePage.html">Cultural</a></li>
+            <li><a href="LandmarkPage.html">Landmarks</a></li>
+            <li><a href="CuisinPage.html">Cuisine</a></li>
+            <li><a href="ContactPage.html">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -86,7 +86,7 @@
     <div>
         <span>Contact us at </span>
         <a href="">info@incredibleindia.com</a>
-        <br>
+
         <p>&copy; 2025 Incredible India Project. All rights reserved.</p>
         <p style="display: inline-block">Follow us on : </p>
         <a href="https://www.facebook.com/IncredibleIndia/">Facebook</a>
