--- a/HTML project/landmarkPage.html
+++ b/HTML project/landmarkPage.html
@@ -10,11 +10,11 @@
 <body>
     <nav>
         <ul>
-            <li><a href="homePage.html">Home</a></li>
-            <li><a href="">Culture</a></li>
-            <li><a href="landmarkPage.html">Landmarks</a></li>
-            <li><a href="">Cuisine</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="HomePage.html">Home</a></li>
+            <li><a href="CulturePage.html">Cultural</a></li>
+            <li><a href="LandmarkPage.html">Landmarks</a></li>
+            <li><a href="CuisinPage.html">Cuisine</a></li>
+            <li><a href="ContactPage.html">Contact Us</a></li>
         </ul>
     </nav>
     <h1>Famous Landmarks in India</h1>
@@ -84,7 +84,7 @@
     </div>
     <div>
         <p>
-            <a href="homePage.html">Back to home</a>
+            <a href="homePage.html">&larr; Back to home</a>
         </p>
         <div>Contact us at <a href="">info@incredibleindia.com</a></div>
         <p>&copy; 2025 Incredible India Project</p>
