--- a/HTML project/contactPage.html
+++ b/HTML project/contactPage.html
@@ -1,93 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact US</title>
-  </head>
-  <body>
-    <nav>
-      <ul>
-          <li><a href="HomePage.html">Home</a></li>
-          <li><a href="CulturePage.html">Cultural</a></li>
-          <li><a href="LandmarkPage.html">Landmarks</a></li>
-          <li><a href="CuisinPage.html">Cuisine</a></li>
-          <li><a href="ContactPage.html">Contact Us</a></li>
-      </ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact US</title>
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li><a href="HomePage.html">Home</a></li>
+      <li><a href="CulturePage.html">Cultural</a></li>
+      <li><a href="LandmarkPage.html">Landmarks</a></li>
+      <li><a href="CuisinPage.html">Cuisine</a></li>
+      <li><a href="ContactPage.html">Contact Us</a></li>
+    </ul>
   </nav>
-    <h1>Contact Us</h1>
-    <p>
-      Please file out the form below for any inquiries or to register as a
-      student.
-    </p>
-    <h1>Student Registration From</h1>
-    <label for=""
-      >First Name:
-      <input type="text" name="name" placeholder="enter First name" /> </label
-    ><br /><br />
-    <label for=""
-      >password:
-      <input
-        type="password"
-        name="password"
-        placeholder="enter a password"
-      /> </label
-    ><br /><br />
-    <label for=""
-      >Gender: <input type="radio" name="Gender" />Male
-      <input type="radio" name="Gender" />Female </label
-    ><br /><br />
-    <label for="">Subscribe to Newsletter:
-      <input type="checkbox" name="" id="">
-    </label><br><br>
-    <label for=""
-      >State:
-      <select name="" id="">
-        <option value="State">select your state</option>
-        <option value="State">Gujrat</option>
-        <option value="State">Delhi</option>
-        <option value="State">Gadhinagar</option>
-      </select> </label
-    ><br /><br />
-    <label for=""
-      >Upload resume:
-      <input type="file">
-      
-       </label
-    ><br /><br />
-    <label for=""
-      >Address:
-      <textarea
-        name=""
-        id=""
-        placeholder="Enter your full address"
-      ></textarea></label
-    ><br /><br />
-    <label for=""
-      >Date of Brith:
-      <input type="date" value="dd-mm-yyyy" /> </label
-    ><br /><br />
-    <label for=""
-      >Preferred Interview time:
-      <input type="time" value="--:--" /> </label
-    ><br /><br />
-    <label for=""
-      >Marks:
-      <input type="text" name="Marks" /> </label
-    ><br /><br />
-    <label for="">
-      <input type="submit" name="submit" />
-      <input type="reset" name="reset" /> </label
-    ><br /><br />
-    <h1>More Information</h1>
-    <p>Explore goverment job opportunities on the official OJAS Website:</p>
- <iframe src="https://ojas.gujarat.gov.in/" frameborder="0"></iframe>
-    <a href="./home.html">
-      <ul>
-        &larr; Back to home
-      </ul>
-    </a>
-    <p>Contact us at <a href="">info@incredibleindia.com</a></p>
-    <p>&copy; 2025 incredible India project</p>
-  </body>
+  <h1>Contact Us</h1>
+  <p>
+    Please fill out the form below for any inquiries or to register as a
+    student.
+  </p>
+
+  <h2>Student Registration Form</h2>
+  <form action="#" method="post" enctype="multipart/form-data">
+    <label for="firstName">First Name:</label>
+    <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required />
+    <br /><br />
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required />
+    <br /><br />
+
+    <label>Gender:</label>
+    <input type="radio" id="male" name="gender" value="male" required />
+    <label for="male">Male</label>
+    <input type="radio" id="female" name="gender" value="female" required />
+    <label for="female">Female</label>
+    <br /><br />
+
+    <label for="newsletter">Subscribe to Newsletter:</label>
+    <input type="checkbox" id="newsletter" name="newsletter" checked />
+    <br /><br />
+
+    <label for="state">State:</label>
+    <select id="state" name="state" required>
+      <option value="">Select your state</option>
+      <option value="state1">Gujarat</option>
+      <option value="state2">Maharashtra</option>
+      <option value="state3">Madhyapradesh</option>
+    </select>
+    <br /><br />
+
+    <label for="resume">Upload Resume:</label>
+    <input type="file" id="resume" name="resume" />
+    <br /><br />
+
+    <label for="address">Address:</label>
+    <textarea id="address" name="address" placeholder="Enter your full address"></textarea>
+    <br /><br />
+
+    <label for="dob">Date of Birth:</label>
+    <input type="date" id="dob" name="dob" required />
+    <br /><br />
+
+    <label for="time">Preferred Interview Time:</label>
+    <input type="time" id="time" name="time" />
+    <br /><br />
+
+    <label for="marks">Marks:</label>
+    <input type="number" id="marks" name="marks" required />
+    <br /><br />
+
+    <button type="submit">Submit</button>
+    <button type="reset">Reset</button>
+  </form>
+  <h1>More Information</h1>
+  <p>Explore government job opportunities on the official OJAS Website:</p>
+  <iframe src="https://ojas.gujarat.gov.in/" frameborder="0"></iframe>
+  <a href="./home.html">
+    <ul>
+      &larr; Back to home
+    </ul>
+  </a>
+  <p>Contact us at <a href="">info@incredibleindia.com</a></p>
+  <p>&copy; 2025 Incredible India project</p>
+</body>
+
 </html>
