Project with html completed

--- a/HTML project/contactPage.html
+++ b/HTML project/contactPage.html
@@ -81,7 +81,7 @@
   <iframe src="https://ojas.gujarat.gov.in/" frameborder="0"></iframe>
   <a href="./home.html">
     <ul>
-      &larr; Back to home
+      <a href="homePage.html">&larr; Back to home</a>
     </ul>
   </a>
   <p>Contact us at <a href="">info@incredibleindia.com</a></p>
