--- a/HTML project/culturePage.html
+++ b/HTML project/culturePage.html
@@ -99,12 +99,9 @@
     <img src="../saree.jpg" alt="saree" height="300px" />
     <p>Traditional Saree-Grace and Elegant</p>
   </ul>
-  <a href="./home.html">
-    <ul>
-      &larr; Back to home
-    </ul>
-  </a>
-  <p>Contact us at <a href="">info@incredibleindia.com</a></p>
+  <a href="./home.html">&larr; Back to home</a>
+
+  <p>Contact us at <a href="homePage.html">info@incredibleindia.com</a></p>
   <p>&copy; 2025 incredible India project</p>
 </body>
 </html>
