--- a/HTML project/landmarkPage.html
+++ b/HTML project/landmarkPage.html
@@ -83,9 +83,8 @@
         </ul>
     </div>
     <div>
-        <p>
-            <a href="homePage.html">&larr; Back to home</a>
-        </p>
+        <a href="./home.html">&larr; Back to home</a>
+
         <div>Contact us at <a href="">info@incredibleindia.com</a></div>
         <p>&copy; 2025 Incredible India Project</p>
     </div>
