--- a/HTML project/cuisinPage.html
+++ b/HTML project/cuisinPage.html
@@ -65,15 +65,7 @@
     <p>south Indian favorite : Mashala Dosa</p>
   </ul>
   <h1>Sweet Delights</h1>
-  <p>
-    <a href="./home.html">
-      <ul> &larr; Back to home
-      </ul>
-    </a>
-  <p>Contact us at <a href="">info@incredibleindia.com</a> </p>
-  <p>&copy; 2025 incredible India project </p> No Indian meal is complete without indulging is some mouth-watering
-  desserts:
-  </p>
+  
   <ul>
     <li><b>Gulab Jamun:</b>Frind milk solids souked in sugar syrup.</li>
     <li><b>Rasgula:</b>Soft and spongy cheese balls in light sugar syrup.</li>
@@ -83,17 +75,10 @@
     <img src="../gulab_jamun.jpg" alt="gulab jamun" />
     <p>Irresistible Gulab jamun</p>
   </ul>
-  <a href="./home.html">
-    <ul>
-      &larr; Back to home
-    </ul>
-  </a>
+  <a href="./home.html">&larr; Back to home</a>
   <p>Contact us at <a href="">info@incredibleindia.com</a></p>
   <p>&copy; 2025 incredible India project</p>
 
-
-
-   
 </body>
 
 </html>
