--- a/HTML + CSS Project/cuisinPage.html
+++ b/HTML + CSS Project/cuisinPage.html
@@ -5,18 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Indian Cuisine</title>
+  <link rel="stylesheet" href="cuisinPage.css">
 </head>
 
 <body>
-  <nav>
-    <ul>
-      <li><a href="HomePage.html">Home</a></li>
-      <li><a href="CulturePage.html">Cultural</a></li>
-      <li><a href="LandmarkPage.html">Landmarks</a></li>
-      <li><a href="CuisinPage.html">Cuisine</a></li>
-      <li><a href="ContactPage.html">Contact Us</a></li>
-    </ul>
-  </nav>
+  <div class="header">
+    <nav>
+      <a href="homePage.html">Home</a>
+      <a href="culturePage.html">Cultural</a>
+      <a href="landmarkPage.html">Landmarks</a>
+      <a href="cuisinPage.html">Cuisine</a>
+      <a href="contactPage.html">Contact Us</a>
+      <span></span>
+    </nav>
+  </div>
   <h1>Popular Indian Dishes</h1>
   <p>
     Explore the flavors of India through its diverse and rich culinary
@@ -40,7 +42,11 @@
       woldwide.
     </li>
     <li><b>Paneer Tikka:</b>Marinated panner cubes grilled to perfection.</li>
-    <img src="../biryani.jpg" alt="biryani" />
+    <div style="display: flex;">
+      <div class="zoom">
+        <img src="../biryani.jpg" alt="biryani" height="300px">
+      </div>
+    </div>
     <p>Aromatic and flavorful Biryani</p>
   </ul>
   <h1>South Indian Cuisine</h1>
@@ -61,23 +67,41 @@
     <li>
       <b>chettinad Chicken:</b>A fiery,flavorful chicken dish from tamil Nadu.
     </li>
-    <img src="../dosa.jpg" alt="dosa" />
+    <div style="display: flex;">
+      <div class="zoom">
+        <img src="../dosa.jpg" alt="dosa" height="300px">
+      </div>
+    </div>
     <p>south Indian favorite : Mashala Dosa</p>
   </ul>
   <h1>Sweet Delights</h1>
-  
+
   <ul>
     <li><b>Gulab Jamun:</b>Frind milk solids souked in sugar syrup.</li>
     <li><b>Rasgula:</b>Soft and spongy cheese balls in light sugar syrup.</li>
     <li>
       <b>Payasam:</b>A south Indian dessert made of milk,rice and jaggery.
     </li>
-    <img src="../gulab_jamun.jpg" alt="gulab jamun" />
+    <div style="display: flex;">
+      <div class="zoom">
+        <img src="../gulab_jamun.jpg" alt="gulab jamun" height="300px"  >
+      </div>
+    </div>
+    
     <p>Irresistible Gulab jamun</p>
   </ul>
-  <a href="./home.html">&larr; Back to home</a>
-  <p>Contact us at <a href="">info@incredibleindia.com</a></p>
-  <p>&copy; 2025 incredible India project</p>
+
+  <div class="footer">
+    <span>Contact us at </span>
+    <a href="" style="text-decoration: none;">info@incredibleindia.com</a>
+    <p>&copy; 2025 Incredible India Project. All rights reserved.</p>
+    <p style="display: inline-block">Follow us on : </p>
+    <img src="../insta logo.jpg" alt="insta logo" height="30px" style="position: relative; top: 10px;">
+    <a href="https://www.instagram.com/nabhagsorathiya/" style="text-decoration: none;">Instagram | </a>
+
+    <img src="../fb logo.jpg" alt="facebook logo" height="30px" style="position: relative; top: 10px;">
+    <a href="https://www.facebook.com/nabhagsorathiya/" style="text-decoration: none;">Facebook</a>
+  </div>
 
 </body>
 
