--- a/HTML + CSS Project/homePage.html
+++ b/HTML + CSS Project/homePage.html
@@ -21,7 +21,7 @@
             <a href="culturePage.html">Cultural</a>
             <a href="landmarkPage.html">Landmarks</a>
             <a href="cuisinPage.html">Cuisine</a>
-            <a href="contactPage.html">Contact</a>
+            <a href="contactPage.html">Contact Us</a>
             <span></span>
         </nav>
     </div>
@@ -37,33 +37,44 @@
                 world.
             </p>
 
-            <img src="../india_map.jpg" alt="India map" height="390">
-            <p>
-            <blockquote>India: A land of cultural and geographical diversity</blockquote>
-            </p>
-            <p>
-            <blockquote>"Unity in diversity is not just a slogan in India but a way of life"</blockquote>
-            </p>
-            <p>highlights of india include:</p>
-            <ul>
-                <li><b>Architecture: </b>Majesty monuments like the Taj Mahal and Red Fort.</li>
-                <li><b>Cuisine: </b>Diverse flavours from spicy curries to sweet desserts.</li>
-                <li><b>Culture: </b>Vibrant festivals, classical dances, and colorful attire.</li>
-            </ul>
+            <div>
+                <div class="zoom" style="display: inline-block;">
+                    <img src="../indiamap.jpeg" alt="India map" height="500px" width="390px">
+                </div>
+            </div>
+            <div">
+                <p>
+                <blockquote>India: A land of cultural and geographical diversity</blockquote>
+                </p>
+                <p>
+                <blockquote>"Unity in diversity is not just a slogan in India but a way of life"</blockquote>
+                </p>
+                <p>highlights of india include:</p>
+                <ul>
+                    <li><b>Architecture: </b>Majesty monuments like the Taj Mahal and Red Fort.</li>
+                    <li><b>Cuisine: </b>Diverse flavours from spicy curries to sweet desserts.</li>
+                    <li><b>Culture: </b>Vibrant festivals, classical dances, and colorful attire.</li>
+                </ul>
+            </div>
         </div>
         <div>
             <h2>Famous Landmarks</h2>
-            <p>India is the home to <mark>29 UNESCO world Heritage sites. </mark> making ot paradise for the history and
+            <p>India is the home to 29 UNESCO world Heritage sites. making ot paradise for the history and
                 Architecture enthusiasts.</p>
-            <ol>
-                <li><img src="../tajmahal.jpg" alt="Taj mahal" height="300px"></li>
-                <p>The Taj Mahal , a symbol of eternal love</p>
-                <li><img src="../qutubminar.jpg" alt="Qutubminar" height="300px"></li>
-                <p>The Qutub minar , an architecture marvel in Delhi</p>
-            </ol>
-            <p>
-                <i>Dont miss exploring the carvings, towering and breathtaking landscapes!</i>
+            <div style="display: flex; gap: 35vw;">
+                <div class="zoom">
+                    <img src="../Taj Mahal, Agra, Uttar Pradesh, India.jpeg" alt="Taj mahal" height="300px">
+                </div>
+                <div class="zoom">
+                    <img src="../Qutub Minar.jpeg" alt="Qutubminar" height="300px">
+                </div>
+            </div>
+            <p style="width: 30vw; text-align: center; float: left;">The Taj Mahal , a symbol of eternal love</p>
+            <p style="width: 40vw; text-align: center; float: right;">The Qutub minar , an architecture marvel in Delhi
             </p>
+            <div>
+                Dont miss exploring the carvings, towering and breathtaking landscapes!
+            </div>
         </div>
         <div>
             <h2>Indian Culture</h2>
@@ -71,43 +82,53 @@
                 has
                 its unique identity and traditiond that are celenrated through festivals and daily life. Here are some
                 highlights :</p>
-            <ul>
-                <li>Classical Dances : Bharatnatyam,Khathak and Odissi.</li>
-                <li>Music :Tradiltional instumentals like Sitar and Tabla.</li>
-                <li>Festivals : Diwali, Holi, Eid and christmas bring people together in celebration.</li>
-                <img src="../dance.jpg" alt="Dance" height="300px">
-                <div>A glimpse of Indian Classical Dance</div>
-            </ul>
+            <div class="zoom" style="display: inline-block;">
+                <img src="../dance.jpg" alt="Dance" height="300px" >
+            </div>
+            <div class="cult">
+                <ul>
+                    <li>Classical Dances : Bharatnatyam,Khathak and Odissi.</li>
+                    <li>Music :Tradiltional instumentals like Sitar and Tabla.</li>
+                    <li>Festivals : Diwali, Holi, Eid and christmas bring people together in celebration.</li>
+                    <div>A glimpse of Indian Classical Dance</div>
+                </ul>
+            </div>
+            <div>
+                <h2>Delious Indian Cuisine</h2>
+                <p>Indian food is as diverse as its Culture. From the fiery curries of south to th e hearty bread of rhe
+                    north,
+                    there's something for everyone. Popular dishes included :</p>
+                <ul>
+                    <li><b>North Indian :</b> Butter chicken, naan and paneer tikka.</li>
+                    <li><b>South Indian :</b> Dosa, idli and sambar.</li>
+                    <li><b>Street food : </b> Vada pav, pani puri and chaat.</li>
+                    <div style="display: flex; gap: 35vw;">
+                        <div class="zoom">
+                            <img src="../biryani.jpg" alt="Biryani" height="300px">
+                        </div>
+                        <div class="zoom">
+                            <img src="../street_food.jpg" alt="street food" height="300px">
+                        </div>
+                    </div>
+                    <div style="width: 30vw; text-align: center; float: left; padding: 10px;">Delicious Hyderabadi
+                        Biryani</div>
+                    <div style="width: 40vw; text-align: center; float: right; padding: 10px;">Colourful and Flavourful
+                        Indian street food</div>
+                </ul>
+            </div>
         </div>
-        <div>
-            <h2>Delious Indian Cuisine</h2>
-            <p>Indian food is as diverse as its Culture. From the fiery curries of south to th e hearty bread of rhe
-                north,
-                there's something for everyone. Popular dishes included :</p>
-            <ul>
-                <li><b>North Indian :</b> Butter chicken, naan and paneer tikka.</li>
-                <li><b>South Indian :</b> Dosa, idli and sambar.</li>
-                <li><b>Street food : </b> Vada pav, pani puri and chaat.</li>
-                <img src="../biryani.jpg" alt="Biryani" height="300px">
-                <div>Delicious Hyderabadi Biryani</div>
 
-                <img src="../street_food.jpg" alt="street food" height="300px">
-                <div>Colourful and Flavourful Indian street food</div>
-            </ul>
+        <div class="footer">
+            <span>Contact us at </span>
+            <a href="" style="text-decoration: none;">info@incredibleindia.com</a>
+            <p>&copy; 2025 Incredible India Project. All rights reserved.</p>
+            <p style="display: inline-block">Follow us on : </p>
+            <img src="../insta logo.jpg" alt="insta logo" height="30px" style="position: relative; top: 10px;">
+            <a href="https://www.instagram.com/nabhagsorathiya/" style="text-decoration: none;">Instagram | </a>
+
+            <img src="../fb logo.jpg" alt="facebook logo" height="30px" style="position: relative; top: 10px;">
+            <a href="https://www.facebook.com/nabhagsorathiya/" style="text-decoration: none;">Facebook</a>
         </div>
-    </div>
-
-    <div class="footer">
-        <span>Contact us at </span>
-        <a href="" style="text-decoration: none;">info@incredibleindia.com</a>
-        <p>&copy; 2025 Incredible India Project. All rights reserved.</p>
-        <p style="display: inline-block">Follow us on : </p>
-        <img src="../insta logo.jpg" alt="insta logo" height="30px" style="position: relative; top: 10px;">
-        <a href="https://www.instagram.com/nabhagsorathiya/" style="text-decoration: none;">Instagram | </a>
-
-        <img src="../fb logo.jpg" alt="facebook logo" height="30px" style="position: relative; top: 10px;">
-        <a href="https://www.facebook.com/nabhagsorathiya/" style="text-decoration: none;">Facebook</a>
-    </div>
 </body>
 
 </html>
