--- a/HTML + CSS Project/landmarkPage.html
+++ b/HTML + CSS Project/landmarkPage.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landmarks</title>
+    <link rel="stylesheet" href="landmarkPage.css">
 </head>
 
 <body>
     <nav>
-        <ul>
-            <li><a href="HomePage.html">Home</a></li>
-            <li><a href="CulturePage.html">Cultural</a></li>
-            <li><a href="LandmarkPage.html">Landmarks</a></li>
-            <li><a href="CuisinPage.html">Cuisine</a></li>
-            <li><a href="ContactPage.html">Contact Us</a></li>
-        </ul>
+        <a href="homePage.html">Home</a>
+        <a href="culturePage.html">Cultural</a>
+        <a href="landmarkPage.html">Landmarks</a>
+        <a href="cuisinPage.html">Cuisine</a>
+        <a href="contactPage.html">Contact Us</a>
+        <span></span>
     </nav>
     <h1>Famous Landmarks in India</h1>
     <p>Explore the iconic Landmarks that define the heritage of India.</p>
@@ -31,7 +31,11 @@
             <li><b>Hawa Mahal :</b>Known as the "Palac of winds," this jaipur marvel is Famous for its intricate
                 latticework.</li>
             <li><b>Charminar :</b>An unique mosque in Hydrabad and a masterpiece of Indo-Islamic architecture.</li>
-            <img src="../redfort.jpg" alt="Red Fort" height="300px">
+            <div style="display: flex;">
+                <div class="zoom">
+                    <img src="../redfort.jpg" alt="Red Fort" height="300px">
+                </div>
+            </div>
             <div>The majestic Red fort in Delhi.</div>
         </ul>
     </div>
@@ -76,17 +80,27 @@
     </div>
     <div>
         <h2>Fun Fact</h2>
-        <p>Did you know ? India has the largest postal network in the world, with over 1,50,000 post offices,including one located on a floating srtucture in Dal lake,Srinagar.</p>
+        <p>Did you know ? India has the largest postal network in the world, with over 1,50,000 post offices,including
+            one located on a floating srtucture in Dal lake,Srinagar.</p>
         <ul>
-            <img src="../dal_lake.jpg" alt="Dal lake" height="300px">
+            <div style="display: flex;">
+                <div class="zoom">
+                    <img src="../dal_lake.jpg" alt="Dal lake" height="300px">
+                </div>
+            </div>
             <p>The floating post office in Dal lake,Srinagar</p>
         </ul>
     </div>
-    <div>
-        <a href="./home.html">&larr; Back to home</a>
+    <div class="footer">
+        <span>Contact us at </span>
+        <a href="" style="text-decoration: none;">info@incredibleindia.com</a>
+        <p>&copy; 2025 Incredible India Project. All rights reserved.</p>
+        <p style="display: inline-block">Follow us on : </p>
+        <img src="../insta logo.jpg" alt="insta logo" height="30px" style="position: relative; top: 10px;">
+        <a href="https://www.instagram.com/nabhagsorathiya/" style="text-decoration: none;">Instagram | </a>
 
-        <div>Contact us at <a href="">info@incredibleindia.com</a></div>
-        <p>&copy; 2025 Incredible India Project</p>
+        <img src="../fb logo.jpg" alt="facebook logo" height="30px" style="position: relative; top: 10px;">
+        <a href="https://www.facebook.com/nabhagsorathiya/" style="text-decoration: none;">Facebook</a>
     </div>
 </body>
 
